--- a/myapp/templates/stores/store_list.html
+++ b/myapp/templates/stores/store_list.html
@@ -7,12 +7,16 @@
             <h1><a href="">FGLite</a></h1>
         </div>
 
-        <div>
-            <h1><a href="">My stores</a></h1>
-			<ul>
-				<li>Store name</li>
-				<li>Store name</li>
-			</ul>
-        </div>
+		{% for store in stores %}
+		    <div>
+		        <h1><a href="">{{ store.store_name }}</a></h1>
+		        <ul class="store-details">
+		        	<li>{{ store.store_type|linebreaksbr }}</li>
+		        	<li>{{ store.store_hours|linebreaksbr }}</li>
+		        	<li>{{ store.store_address|linebreaksbr }}</li>
+		        	<li>{{ store.store_phone|linebreaksbr }}</li>
+		        </ul>
+		    </div>
+		{% endfor %}
     </body>
 </html>
