--- a/myapp/templates/stores/store_list.html
+++ b/myapp/templates/stores/store_list.html
@@ -1,9 +1,14 @@
+{% load staticfiles %}
 <html>
     <head>
         <title>FGLite</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/fglite.css' %}">
     </head>
     <body>
-        <div>
+        <div class="page-header">
             <h1><a href="">FGLite</a></h1>
         </div>
 
