--- a/myapp/static/css/fglite.css
+++ b/myapp/static/css/fglite.css
@@ -1,4 +1,14 @@
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
+body {
+  padding-top: 50px;
+}
 
+.navbar-brand {
+	font-family: 'Lobster', cursive;
+}
+
+.red {
+	border: 1px solid red;
+}
