--- a/myapp/templates/stores/store_list.html
+++ b/myapp/templates/stores/store_list.html
@@ -8,26 +8,52 @@
         <link rel="stylesheet" href="{% static 'css/fglite.css' %}">
     </head>
     <body>
-	    <nav class="navbar navbar-default">
-	      	<div class="container">
-	    		<div class="">
-	            	<h1><a href="/">FGLite</a></h1>
-	        	</div>
-	    	</div>
-		</nav>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">FGLite</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">My Profile</a></li>
+            <li><a href="#">Add menu</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#about">Register</a></li>
+            <li><a href="#contact">Log In</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
-		<div class="container">
-		{% for store in stores %}
-		    <div class="store-block">
-		        <h1><a href="">{{ store.store_name }}</a></h1>
-		        <ul class="store-details">
-		        	<li>{{ store.store_type|linebreaksbr }}</li>
-		        	<li>{{ store.store_hours|linebreaksbr }}</li>
-		        	<li>{{ store.store_address|linebreaksbr }}</li>
-		        	<li>{{ store.store_phone|linebreaksbr }}</li>
-		        </ul>
-		    </div>
-		{% endfor %}
-		</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	        	<h1>Your stores</h1>
+        	</div>
+    	</div>
+    	<div class="row">
+			{% for store in stores %}
+				<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+			        <h1><a href="">{{ store.store_name }}</a></h1>
+			        <ul class="store-details">
+			        	<li>{{ store.store_type|linebreaksbr }}</li>
+			        	<li>{{ store.store_hours|linebreaksbr }}</li>
+			        	<li>{{ store.store_address|linebreaksbr }}</li>
+			        	<li>{{ store.store_phone|linebreaksbr }}</li>
+			        </ul>
+			    </div>
+			{% endfor %}
+      	</div>
+
+    </div><!-- /.container -->
+
+<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="{% static 'js/fglite.js' %}"></script> -->
     </body>
 </html>
