--- a/myapp/templates/shared/base.html
+++ b/myapp/templates/shared/base.html
@@ -4,7 +4,6 @@
         <title>FGLite</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/fglite.css' %}">
     </head>
     <body>
@@ -31,26 +30,11 @@
       </div>
     </nav>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-	        	<h1>Your stores</h1>
-        	</div>
-    	</div>
-    	<div class="row">
-			{% for store in stores %}
-				<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			        <h1><a href="">{{ store.store_name }}</a></h1>
-			        <ul class="store-details">
-			        	<li>{{ store.store_type|linebreaksbr }}</li>
-			        	<li>{{ store.store_hours|linebreaksbr }}</li>
-			        	<li>{{ store.store_address|linebreaksbr }}</li>
-			        	<li>{{ store.store_phone|linebreaksbr }}</li>
-			        </ul>
-			    </div>
-			{% endfor %}
-      	</div>
-
+    <div class="container">
+      <div class="row">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div><!-- /.container -->
 
 <!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
