Add form for a new store

--- a/myapp/templates/shared/base.html
+++ b/myapp/templates/shared/base.html
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="container">
-      <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         {% block content %}
         {% endblock %}
       </div>
