--- a/myapp/templates/shared/store_list.html
+++ b/myapp/templates/shared/store_list.html
@@ -1,13 +1,13 @@
 {% extends 'shared/base.html' %}
 
 {% block content %}
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <h1>Your Stores</h1>
-    </div>  {% for store in stores %}
-  	<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <h1>Your Stores</h1> 
+  {% for store in stores %}
+  	<div class="store-list">
       <h3><a href="{% url 'store_detail' pk=store.pk %}">{{ store.store_name }}</a></h3>
     </div>
   {% endfor %}
+    <a href="{% url 'store_new' %}">Add a store</a>  
 {% endblock %}
 
 
