--- a/myapp/templates/shared/store_edit.html
+++ b/myapp/templates/shared/store_edit.html
@@ -6,4 +6,5 @@
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
+    <a href="{% url 'store_list' %}">Back</a>
 {% endblock %}
