--- a/myapp/templates/stores/store_detail.html
+++ b/myapp/templates/stores/store_detail.html
@@ -8,8 +8,9 @@
 		<li><strong>Address:</strong> {{ store.store_address|linebreaksbr }}</li>
 		<li><strong>Phone:</strong> {{ store.store_phone|linebreaksbr }}</li>
 	</ul>
+	<a href="{% url 'store_list' %}">Back</a>
 	{% if user.is_authenticated %}
 		<a href="{% url 'store_edit' pk=store.pk %}">Edit</a>
+		<a href="{% url 'menu_new' pk=store.pk %}">Add menu</a>
 	{% endif %}
-	<a href="{% url 'store_list' %}">Back</a>
 {% endblock %}
