--- a/myapp/templates/stores/store_detail.html
+++ b/myapp/templates/stores/store_detail.html
@@ -7,6 +7,7 @@
 		<li><strong>Hours:</strong> {{ store.store_hours|linebreaksbr }}</li>
 		<li><strong>Address:</strong> {{ store.store_address|linebreaksbr }}</li>
 		<li><strong>Phone:</strong> {{ store.store_phone|linebreaksbr }}</li>
+		<li><strong>Menus:</strong> {{ store.menus|linebreaksbr }}</li>
 	</ul>
 	<a href="{% url 'store_list' %}">Back</a>
 	{% if user.is_authenticated %}
